assets/css/style.css
@import url('https://googleapis.com');

:root {
    --warmSand: #E6C288;
    --seashellWhite: #F5F2ED;
    --water: #7CB5C5;
    --deepWater: #3E6371;
    --seaFoam: #A3D9CC;
    --sunsetCoral: #E88D67;
    font-family: 'Knewave', 'Helvetica Neue', Arial, sans-serif;
    font-style: normal;
    letter-spacing: 0.075em;
    background-color: var(--seashellWhite);
}

body {
    margin: 0px;
    padding: 0px;
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

header {
    background: linear-gradient(to left,
            #E8D3A7 0%,
            var(--warmSand) 35%,
            var(--seaFoam) 45%,
            var(--water) 75%,
            var(--deepWater) 100%);
    display: flex;
    align-items: flex-end;
    justify-content: space-between;
}

nav ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    display: flex;
}

nav ul li {
    font-size: clamp(1.5rem, 2vw, 3rem);
    white-space: nowrap;
    padding: 1vw !important;
}

nav li a {
    display: block;
    text-decoration: none;
    color: var(--sunsetCoral);
}

section {
    flex-grow: 1;
    padding: 10px;
    background-color: var(--deepWater);
    display: flex;
    height: 100%;
}

section h2 {
    color: var(--water);
    font-size: clamp(1.5rem, 3vw, 3rem);
    margin: 0;
}

H1 {
    font-size: clamp(1.5rem, 5vw, 3rem);
    margin: 0;
}

H1 a {
    margin-left: 20px;
    text-decoration: none;
    color: var(--sunsetCoral);
}

p {
    font-family: "Inder", sans-serif;
    font-weight: 400;
    font-style: normal;
    letter-spacing: normal;
}

#hero-img {
    margin: 0;
    padding: 0;
    width: 100vw;
    height: 40vh;
    object-fit: cover;
}

.content {
    display: flex;
    flex-grow: 1;
    color: var(--seashellWhite);
    font-size: clamp(1.5rem, 1vw, 3rem);
}

.home-content-left {
    width: 60%;
    padding: 0 30px;
}

.home-content-right {
    width: 40%;
    display: flex;
    flex: 1 1 50px;
    padding-top: 3vw;
    flex-direction: column;
    font-family: "Inder", sans-serif;
}

.content-supporting {
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    color: var(--seashellWhite);
    font-size: clamp(1.5rem, 1vw, 3rem);
}

.content-supporting-top {
    display: flex;
    flex-direction: row;
}

.content-supporting-bottom {
    display: flex;
    flex-direction: row;
}

.content-supporting-text {
    align-content: center;
}

.supporting-img-large {
    max-width: 500px;
    padding: 15px;
    margin: 15px;
    background-color: var(--water);
}

.home-content-right a {
    margin-top: 25px;
}

.hyper-link {
    text-decoration: none;
    color: var(--water);
}

.hyper-link:hover {
    color: var(--sunsetCoral);
}

#hamburger-icon {
    color: var(--sunsetCoral);
}

#active-link a {
    color: var(--deepWater);
}

#book-now {
    padding-right: 1.25em;
    float: right;
    font-family: "Inder", sans-serif;
}

@media screen and (width <=800px) {

    H1 {
        font-size: 7vw;
        margin: 0;
        align-self: center;
    }

    header {
        position: -webkit-sticky;
        position: sticky;
        top: 0;
        flex-direction: column;
        align-items: flex-start;
    }


    nav ul {
        flex-direction: column;
    }

    #active-link {
        font-size: 5vw;
        padding: 5px 0px 0px 20px;
    }

    .inactive-pages {
        font-size: 5vw;
        padding: 5px 0px 0px 20px;
    }

    section h2 {
        font-size: 5vw;
        padding: 0;
        margin: 0;
    }

    .content {
        display: flex;
        flex-wrap: wrap;
        font-size: clamp(1.5rem, 4vw, 3rem);
        text-align: center;
    }

    .home-content-left {
        width: 100%;
        padding: 10px;
        height: fit-content;
    }

    .home-content-right {
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;
        justify-content: space-around;
        padding: 10px;
        width: 100%;
    }

    .content-supporting-top {
        flex-direction: column;
        text-align: center;
        align-items: center;
    }

    .content-supporting-bottom {
        flex-direction: column;
        text-align: center;
        align-items: center;
    }

    #nav-links {
        display: block;
        position: relative;
        width: 100%;
    }

    #hamburger-icon {
        display: block;
        font-size: 7vw;
        position: absolute;
        left: 2vw;
    }

    #active-link a {
        color: var(--sunsetCoral);
    }

    .inactive-pages {
        display: none;
        padding: 0;
    }
}

@media screen and (width > 800px) {

    #hamburger-icon {
        display: none;
    }

    .inactive-pages {
        display: block !important;
        padding: 5px 0px 0px 20px;
    }
}

